--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ paste = "1.0.15"
 dotenvy = "0.15.7"
 tracing-subscriber = "0.3.18"
 arboard = "3.4.1"
+tracing = "0.1.40"
 
 [workspace]
 members = ["crates/core", "crates/macros"]
