--- a/crates/macros/Cargo.toml
+++ b/crates/macros/Cargo.toml
@@ -8,6 +8,8 @@ syn = "2.0"
 quote = "1.0"
 proc-macro2 = "1.0.89"
 elvish-core = { path = "../core", version = "0.1.0" }
+dotenvy = "0.15.7"
+indoc = "2.0.5"
 
 [lib]
 proc-macro = true
