--- a/examples/full/empty-template/Cargo.toml
+++ b/examples/full/empty-template/Cargo.toml
@@ -5,22 +5,16 @@ edition = "2021"
 
 [dependencies]
 color-eyre = "0.6.3"
-dotenvy = "0.15.7"
-elvish = { path = "../../.." }
+elvish = "0.1.0"
 glam = "0.29.1"
 nalgebra = "0.33.2"
 ndarray = "0.16.1"
 num = "0.4.3"
 peg = "0.8.4"
 rayon = "1.10.0"
-tracing-subscriber = "0.3.18"
 
 [features]
-default = ["all", "both"]
-
-# Detected by `elvish`
-# TODO: Implement this
-today = []
+default = ["all"]
 
 part1 = []
 part2 = []
