--- a/examples/full/2023/Cargo.toml
+++ b/examples/full/2023/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 color-eyre = "0.6.3"
 dotenvy = "0.15.7"
+either = "1.13.0"
 elvish = { path = "../../.." }
 glam = "0.29.1"
 nalgebra = "0.33.2"
