--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,17 @@
+[workspace.package]
+version = "0.1.0"
+authors = ["Odilf <odysseas.maheras@gmail.com>"]
+description = "Overengineered Advent of Code framework - not quite Santa's elves"
+license = "MIT"
+edition = "2021"
+
 [package]
 name = "elvish"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true 
+authors.workspace = true
+description.workspace = true
+license.workspace = true
+edition.workspace = true
 
 [dependencies]
 elvish-macros = { path = "crates/macros", version = "0.1.0" }
