--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "elvish-core"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true 
+authors.workspace = true
+description.workspace = true
+license.workspace = true
+edition.workspace = true
 
 [dependencies]
 color-eyre.workspace = true
