--- a/crates/macros/Cargo.toml
+++ b/crates/macros/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "elvish-macros"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true 
+authors.workspace = true
+description.workspace = true
+license.workspace = true
+edition.workspace = true
 
 [dependencies]
 syn = "2.0"
