--- a/crates/macros/Cargo.toml
+++ b/crates/macros/Cargo.toml
@@ -5,6 +5,9 @@ authors.workspace = true
 description.workspace = true
 license.workspace = true
 edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+documentation.workspace = true
 
 [dependencies]
 syn = "2.0"
